$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.14-3 (opened June 5, 2008)

	* rda, cca, capscale: obviously do not handle correctly cases
	where the rank of constraints + conditions is higher than the rank
	of the dependent (community) data. Now issues a warning in
	'print'. This is an ancient problem, but surfaced recently in
	several places.
	
Version 1.14-2 (closed June 5, 2008)

	* Helene Wagner joined the vegan team.

	* mso: automatically collapses distance classes larger than half
	the maximum distance into a single distance class.

	* mso: plot.mso renamed to msoplot so that plot.cca also works,
	and the example uses now Oribatid mite data set. 

	* mso: gained a print method that also shows the variogram
	(Helene, please check this!), and mso knows about its own call. 

	* lines.spantree: did not pass graphical arguments to lines
	(broken in 1.12-15).

	* ade2vegancca: a new function which tries to change an ade4:::cca
	object to vegan:::cca object (and manages partially). This is used
	internally in print.cca, scores.cca and summary.cca so that vegan
	can display some information from ade4:::cca (with a warning).
	Since scores.cca works for ade4, so do plot, orditkplot etc which
	rely on scores.
	
Version 1.14-1 (closed May 29, 2008)

	* plot.mso: passes extra arguments (...) to graphical functions.

	* mite.xy: new data set with spatial coordinates for the Oribatid
	mite data. From Pierre Legendre's web page.

	* weights failed in several ordination utilities, because
	weights.default in R 2.7.0 (stats) could not cope with objects
	that do not have weights. R 2.6.2 still returned NULL for those
	objects, but now weights.default gives an error. As a workaround
	several vegan functions define internally 
	       weights.default <- function(object, ...) NULL 
	to get back the old behaviour. Concerns orglspider, ordicluster,
	ordispider, ordiellipse, ordisurf, factorfit, vectorfit.
