@@ -1,4 +1,4 @@
-"cca.default" <-
+`cca.default` <-
     function (X, Y, Z, ...) 
 {
     ZERO <- 1e-04
@@ -50,9 +50,14 @@
         if (is.null(pCCA)) 
             rank <- Q$rank
         else rank <- Q$rank - pCCA$rank
+        ## save rank of constraints
+        qrank <- rank
         Y <- qr.fitted(Q, Xbar)
         sol <- svd(Y)
+        ## rank of svd can be < qrank
         rank <- min(rank, sum(sol$d > ZERO))
+        if (rank < Q$rank)
+            warning("rank of QR decomposition > rank of svd: trouble ahead")
         ax.names <- paste("CCA", 1:length(sol$d), sep = "")
         colnames(sol$u) <- ax.names
         colnames(sol$v) <- ax.names
@@ -73,7 +78,7 @@
             oo <- Q$pivot
             if (!is.null(pCCA$rank)) 
                 oo <- oo[-(1:pCCA$rank)] - ncol(Z.r)
-            oo <- oo[1:rank]
+            oo <- oo[1:qrank]
             if (length(oo) < ncol(Y.r)) 
                 CCA$alias <- colnames(Y.r)[-oo]
             CCA$biplot <- cor(Y.r[, oo, drop = FALSE], sol$u[, 
@@ -127,3 +132,4 @@
     class(sol) <- "cca"
     sol
 }
+
